[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/font/Kenney Pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/management/Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/logo.png" type="Texture" id=3]
[ext_resource path="res://scenes/ParticlesBubles.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/watereffect-claro.png" type="Texture" id=5]
[ext_resource path="res://scripts/ParallaxLayerMovement.gd" type="Script" id=6]
[ext_resource path="res://assets/watereffect-escuro.png" type="Texture" id=7]
[ext_resource path="res://assets/bg.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/shark.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.815686, 0.411765, 0.0862745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=11]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxEmpty" id=12]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxEmpty" id=13]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxEmpty" id=14]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 150, 53 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 150, 0, 150, 53 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 300, 0, 150, 53 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 450, 0, 150, 53 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 600, 0, 150, 53 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 750, 0, 150, 53 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=15]
size = 40
outline_size = 2
outline_color = Color( 0.117647, 0.160784, 0.278431, 1 )
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.5
margin_top = -6.0
margin_right = 39.5
margin_bottom = 122.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 79.0
margin_bottom = 29.0
custom_colors/font_color_focus = Color( 0.678431, 0.239216, 0.396078, 1 )
custom_colors/font_color_hover = Color( 0.0745098, 0.352941, 0.4, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 11 )
text = "JOGAR"
flat = true

[node name="Score" type="Button" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 79.0
margin_bottom = 62.0
custom_colors/font_color_focus = Color( 0.678431, 0.239216, 0.396078, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 12 )
text = "SCORE"
flat = true

[node name="Opções" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 79.0
margin_bottom = 95.0
custom_colors/font_color_focus = Color( 0.678431, 0.239216, 0.396078, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 13 )
text = "OPÇÕES"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 79.0
margin_bottom = 128.0
custom_colors/font_color_focus = Color( 0.678431, 0.239216, 0.396078, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 14 )
text = "SAIR"
flat = true

[node name="Bubles" parent="." instance=ExtResource( 4 )]
position = Vector2( 328, 358 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="bg" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.329412, 0.721569, 0.8, 1 )
motion_mirroring = Vector2( 640, 0 )
script = ExtResource( 6 )
speed = -5.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/bg"]
position = Vector2( 320, 181 )
texture = ExtResource( 8 )

[node name="shark" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.329412, 0.721569, 0.8, 1 )
position = Vector2( 169, -61 )
motion_mirroring = Vector2( 1200, 0 )
script = ExtResource( 6 )
speed = -40.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="ParallaxBackground/shark"]
position = Vector2( 367, 165 )
frames = SubResource( 10 )
frame = 5
playing = true

[node name="shark2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.329412, 0.721569, 0.8, 1 )
position = Vector2( 524, 11 )
motion_mirroring = Vector2( 1200, 0 )
script = ExtResource( 6 )
speed = -100.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="ParallaxBackground/shark2"]
position = Vector2( 367, 165 )
frames = SubResource( 10 )
frame = 4
playing = true

[node name="agua1" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 1, 1, 1, 0.360784 )
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 6 )
speed = 2.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/agua1"]
position = Vector2( 640, 180 )
texture = ExtResource( 5 )

[node name="agua2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 1, 1, 1, 0.239216 )
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 6 )
speed = -4.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/agua2"]
position = Vector2( 640, 180 )
texture = ExtResource( 7 )

[node name="fundo" type="Node2D" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 313, 115 )
texture = ExtResource( 3 )

[node name="GAME" type="Label" parent="Sprite"]
margin_left = -67.0
margin_top = 20.0
margin_right = -1.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.117647, 0.160784, 0.278431, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 15 )
text = "GAME"
align = 1

[node name="GAME2" type="Label" parent="Sprite"]
margin_left = -70.0
margin_top = 16.0
margin_right = -4.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.996078, 0.372549, 0.419608, 1 )
custom_colors/font_color_shadow = Color( 0.960784, 0.556863, 0.458824, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 15 )
text = "GAME"
align = 1

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="VBoxContainer/Opções" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
